// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display error warning about required prop 1`] = `"Failed undefined type: The undefined \`displayPrice\` is marked as required in \`<<anonymous>>\`, but its value is \`undefined\`."`;

exports[`Renders price with a compare at price 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #bfbfbf;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: block;
}

<div>
  <div
    className="c0"
  >
    $300.00
  </div>
  <del
    className="c1"
  >
    $400.00
  </del>
  
</div>
`;

exports[`Renders price without a compare at price 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

<div>
  <div
    className="c0"
  >
    $300.00
  </div>
  
</div>
`;

exports[`Renders price without a compare at price, due to the fact that the prices are equal. 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

<div>
  <div
    className="c0"
  >
    $300.00
  </div>
  
</div>
`;
